final-fixes-and-backend-code-refactoring
